<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.activity.ProfileActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_profile"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="@dimen/match_constraints"
        android:layout_marginBottom="@dimen/space_large"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintDimensionRatio="1:1"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:layout_constraintBottom_toTopOf="@id/text_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_name_title"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/space_large"
        app:layout_constraintBottom_toTopOf="@id/text_email_title"
        app:layout_constraintEnd_toStartOf="@id/text_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_profile" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:text="@string/name_rahul_yadav"
        android:layout_marginEnd="@dimen/space_large"
        app:layout_constraintBottom_toBottomOf="@id/text_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_name_title"
        app:layout_constraintTop_toTopOf="@+id/text_name_title" />

    <TextView
        android:id="@+id/text_email_title"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:text="@string/title_email"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_name"
        app:layout_constraintStart_toStartOf="@+id/text_name_title"
        app:layout_constraintTop_toBottomOf="@+id/text_name_title" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:text="@string/email_test"
        app:layout_constraintBottom_toBottomOf="@+id/text_email_title"
        app:layout_constraintEnd_toEndOf="@id/text_name"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@id/text_name" />

    <Button
        android:id="@+id/button_edit_profile"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_small"
        android:padding="@dimen/space_normal"
        android:text="@string/button_edit_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email" />
</androidx.constraintlayout.widget.ConstraintLayout>