<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.activity.LoginActivity">

    <TextView
        android:id="@+id/text_login_activity"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lable_login_activity"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/title_medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/text_input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:padding="@dimen/space_small"
        app:layout_constraintBottom_toTopOf="@id/text_input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login_activity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:padding="@dimen/space_small"
        app:layout_constraintBottom_toTopOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_small"
        android:padding="@dimen/space_normal"
        android:text="@string/action_login"
        app:layout_constraintBottom_toTopOf="@id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_password" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_margin="@dimen/space_extra_small"
        android:text="@string/button_create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login" />

    <Button
        android:id="@+id/button_forgot_password"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_margin="@dimen/space_extra_small"
        android:text="@string/button_forgot_password"
        app:layout_constraintBottom_toBottomOf="@id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_register"
        app:layout_constraintTop_toTopOf="@id/button_register" />
</androidx.constraintlayout.widget.ConstraintLayout>