<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.activity.ForgotPasswordActivity">

    <TextView
        android:id="@+id/text_forgot_activity"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lable_forgot_password"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/title_medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/text_input_forgot_password_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_forgot_password_email"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_registered_email"
        android:layout_margin="@dimen/space_small"
        app:layout_constraintBottom_toTopOf="@id/button_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_forgot_activity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_send"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_small"
        android:padding="@dimen/space_normal"
        android:text="@string/action_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_forgot_password_email" />
</androidx.constraintlayout.widget.ConstraintLayout>